# beginning-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
chapter_1/simple/: CMakeLists.txt
chapter_1/simple/src/: main.cpp
chapter_10/frustum_culling/: CMakeLists.txt
chapter_10/frustum_culling/data/: basic-fixed.frag  basic-fixed.vert  model.frag  water.vert
chapter_10/frustum_culling/src/: example.cpp  example.h  frustum.cpp  frustum.h  geom.h  glslshader.h  glwindow.cpp  glwindow.h  glxwindow.cpp  main.cpp  md2model.cpp  md2model.h  monster.h  terrain.cpp  terrain.h  tree.cpp  tree.h
chapter_11/freetype_fonts/: CMakeLists.txt
chapter_11/freetype_fonts/data/: font.frag  font.vert
chapter_11/freetype_fonts/src/: example.cpp  example.h  freetypefont.cpp  freetypefont.h  glwindow.cpp  glxwindow.cpp  glxwindow.h  main.cpp  targa.h
chapter_11/texturemapped_fonts/: CMakeLists.txt
chapter_11/texturemapped_fonts/data/: font.frag
chapter_11/texturemapped_fonts/src/: example.cpp  example.h  glwindow.cpp  glxwindow.cpp  main.cpp  targa.h  texturemappedfont.cpp  texturemappedfont.h
chapter_12/stencil_reflection/: CMakeLists.txt
chapter_12/stencil_reflection/data/: basic.frag
chapter_12/stencil_reflection/src/: example.cpp  example.h  glslshader.h  main.cpp  plane.cpp  plane.h  sphere.cpp  sphere.h
chapter_13/ogro_invasion/: CMakeLists.txt
chapter_13/ogro_invasion/src/: boglgpwindow.h  camera.cpp  camera.h  entity.cpp  entity.h  example.cpp  example.h  explosion.cpp  explosion.h  freetypefont.cpp  freetypefont.h  gameworld.cpp  gameworld.h  glfwkeyboardinterface.h  glfwmouseinterface.h  glslshader.h  glwindow.cpp  glwindow.h  glxwindow.cpp  glxwindow.h  landscape.cpp  landscape.h  main.cpp  md2model.cpp  md2model.h  mouseinterface.h  ogro.cpp  player.cpp  rocket.cpp  targa.h  terrain.cpp  terrain.h  tree.cpp  tree.h  xkeyboardinterface.h  xmouseinterface.h
chapter_2/first_app/: CMakeLists.txt
chapter_2/first_app/src/: example.cpp  example.h  glwindow.cpp  main.cpp
chapter_3/draw_arrays/: CMakeLists.txt
chapter_3/draw_arrays/src/: example.cpp  example.h  glwindow.cpp  glxwindow.cpp  main.cpp
chapter_3/lines/: CMakeLists.txt
chapter_3/lines/src/: example.cpp  example.h  glwindow.cpp  glxwindow.cpp  main.cpp
chapter_3/pointy_example/: CMakeLists.txt
chapter_3/pointy_example/src/: example.cpp  glxwindow.cpp  main.cpp
chapter_3/polygon_mode/: CMakeLists.txt
chapter_3/polygon_mode/src/: example.cpp  example.h  glxwindow.cpp  main.cpp
chapter_3/shared_vertices/: CMakeLists.txt
chapter_3/shared_vertices/src/: example.cpp  example.h  glwindow.cpp  glxwindow.cpp  main.cpp
chapter_3/simple_line/: CMakeLists.txt
chapter_3/simple_line/src/: example.cpp  example.h  glwindow.cpp  glxwindow.cpp  main.cpp
chapter_3/simple_point/: CMakeLists.txt
chapter_3/simple_point/src/: example.cpp  glwindow.cpp  glxwindow.cpp
chapter_3/simple_triangle/: CMakeLists.txt
chapter_3/simple_triangle/src/: example.cpp  example.h  glwindow.cpp  glxwindow.cpp  main.cpp
chapter_4/projection_example/: CMakeLists.txt
chapter_4/projection_example/src/: example.cpp  example.h  glwindow.cpp  glxwindow.cpp  glxwindow.h  main.cpp
chapter_4/robot_example/: CMakeLists.txt
chapter_4/robot_example/src/: example.cpp  example.h  glxwindow.cpp  main.cpp  robot.cpp  robot.h
chapter_4/square_rotation/: CMakeLists.txt
chapter_4/square_rotation/src/: example.cpp  example.h  glwindow.cpp  glxwindow.cpp  main.cpp
chapter_4/square_scaling/: CMakeLists.txt
chapter_4/square_scaling/src/: example.cpp  example.h  glwindow.cpp  glxwindow.cpp  main.cpp
chapter_4/square_translation/: CMakeLists.txt
chapter_4/square_translation/src/: example.cpp  example.h  glwindow.cpp  glxwindow.cpp  main.cpp
chapter_5/terrain_extensions_glee/: CMakeLists.txt
chapter_5/terrain_extensions_glee/src/: example.cpp  example.h  glwindow.cpp  glwindow.h  glxwindow.cpp  main.cpp  terrain.cpp  terrain.h
chapter_5/terrain_extensions_manual/: CMakeLists.txt
chapter_5/terrain_extensions_manual/src/: example.cpp  example.h  glwindow.cpp  glxwindow.cpp  main.cpp
chapter_6/robot_kazmath_example/: CMakeLists.txt
chapter_6/robot_kazmath_example/data/: basic-fixed.frag
chapter_6/robot_kazmath_example/src/: Robot.cpp  Robot.h  example.cpp  example.h  glsl_shader.h  glwindow.cpp  glxwindow.cpp  glxwindow.h  main.cpp
chapter_6/terrain_glsl/: CMakeLists.txt
chapter_6/terrain_glsl/data/: basic-fixed.vert
chapter_7/terrain_simple_texture/: CMakeLists.txt
chapter_7/texture_wrap_modes/: CMakeLists.txt
chapter_8/blending/: CMakeLists.txt
chapter_8/multiple_lights/: CMakeLists.txt
chapter_8/multiple_lights/data/: basic-fixed.vert
chapter_8/multiple_lights/src/: example.cpp  example.h  glslshader.h  glwindow.cpp  glxwindow.cpp  main.cpp
chapter_8/point_light/: CMakeLists.txt
chapter_8/point_light_per_pixel/: CMakeLists.txt
chapter_8/simple_fog/: CMakeLists.txt
chapter_8/spot_light/: CMakeLists.txt
chapter_8/terrain_lighting/: CMakeLists.txt
chapter_9/alpha_test/: CMakeLists.txt
chapter_9/cube_mapping/: CMakeLists.txt
chapter_9/multitexture/: CMakeLists.txt
lib/glee/: GLee.h
lib/glfw-window/: examplecallback.h  glfwwindow.cpp  glfwwindow.h
(+113 files in other folders)
