cmake_minimum_required(VERSION 3.0)
project(beginning-opengl)

add_subdirectory(chapter_1/simple)

#add_subdirectory(chapter_2/first_app)
#
#add_subdirectory(chapter_3/draw_arrays)
#add_subdirectory(chapter_3/lines)
#add_subdirectory(chapter_3/pointy_example)
#add_subdirectory(chapter_3/polygon_mode)
#add_subdirectory(chapter_3/shared_vertices)
#add_subdirectory(chapter_3/simple_line)
#add_subdirectory(chapter_3/simple_point)
#add_subdirectory(chapter_3/simple_triangle)
#
#add_subdirectory(chapter_10/frustum_culling)
#
#add_subdirectory(chapter_11/freetype_fonts)
#add_subdirectory(chapter_11/texturemapped_fonts)
#
#add_subdirectory(chapter_12/stencil_reflection)
#
#add_subdirectory(chapter_13/ogro_invasion)


