CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(APP_NAME shared_vertices)

PROJECT(${APP_NAME})

IF(WIN32)
	ADD_DEFINITIONS(-D_WIN32)
ENDIF(WIN32)

SET(SOURCE_FILES
		src/main.cpp
		src/example.cpp
		)



IF(WIN32)
	ADD_EXECUTABLE(${APP_NAME} WIN32 ${SOURCE_FILES})
ELSE(WIN32)
	ADD_EXECUTABLE(${APP_NAME} ${SOURCE_FILES})
ENDIF(WIN32)

IF(WIN32)
	SET(LIBRARIES OPENGL32 GLU32)
ELSE(WIN32)
	SET(LIBRARIES GL GLU)
ENDIF(WIN32)

TARGET_LINK_LIBRARIES(${APP_NAME} glee glfw-window glfw ${LIBRARIES})
